# learning-opengl-fr

./: .clang-format  CMakeLists.txt
shaders/compute/: compute.comp  prefix_sum.glsl
shaders/fragment/: computeFragment.frag  first.frag  yellow.frag
shaders/vertex/: computeVertex.vert  first.vert
src/: compute_shader_test.cpp  hello_triangle_ex1.cpp  hello_triangle_ex2.cpp  hello_triangle_ex3.cpp  imgui_impl_glfw.h  main.cpp  prefix_sum.cpp  shader.h  shaders_ex1.cpp  shaders_ex2.cpp  textures.cpp
